--- a/Resources/Private/Assets/StyleSheets/styles.scss
+++ b/Resources/Private/Assets/StyleSheets/styles.scss
@@ -3,3 +3,13 @@ $fa-font-path: '../Fonts';
 @import 'pure/pure';
 @import 'pure/grids-responsive';
 @import 'font-awesome/scss/font-awesome';
+
+@import 'Components/base';
+@import 'Components/layout';
+@import 'Components/form';
+@import 'Components/button';
+@import 'Components/menu';
+@import 'Components/splash';
+@import 'Components/content';
+@import 'Components/tablet';
+@import 'Components/desktop';
