--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -1,8 +1,11 @@
-<f:layout name="Default" />
-<f:section name="content">
-  <h2>{pageTitle}</h2>
+<div xmlns="http://www.w3.org/1999/xhtml" lang="en"
+	 xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 
-  <!--TYPO3SEARCH_begin-->
-  {contentMain -> f:format.raw()}
-  <!--TYPO3SEARCH_end-->
-</f:section>
+	<f:layout name="Default" />
+
+	<f:section name="Navigation">
+		<div class="header">
+			<f:render partial="Navigation" section="HomeMenu" arguments="{_all}"/>
+		</div>
+	</f:section>
+</div>
