Add custom content element

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -11,7 +11,9 @@
 	</f:section>
 
 	<f:section name="Splash">
-		<v:content.render column="0"/>
+		<div class="splash-container">
+			<v:content.render column="0" pageUid="{data.uid}"/>
+		</div>
 	</f:section>
 
 	<f:section name="Content">
